--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,32 +2,50 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  scroll-behavior: smooth;
+  text-decoration: none;
+  list-style: none;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+:root {
+  --primary-color: #202938;
+  --secondary-color: #111828;
+  --red-color: #f43219;
+  --orange-color: #eb671c;
+  --link-color: #757e8d;
+}
+
+/* FONTS */
+@font-face {
+  font-family: "yekanRegular";
+  src: url("../assets/fonts/yekan.ttf");
+}
+
+@font-face {
+  font-family: "yekanBold";
+  src: url("../assets/fonts/yekanBold.ttf");
+}
+
+@font-face {
+  font-family: "vazirRegular";
+  src: url("../assets/fonts/vazir.ttf");
+}
+
+@font-face {
+  font-family: "vazirLight";
+  src: url("../assets/fonts/vazirLight.ttf");
+}
+
+@font-face {
+  font-family: "vazirBold";
+  src: url("../assets/fonts/vazirBold.ttf");
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-}
-
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+  background-color: var(--primary-color);
+  color: #fdfdfd;
 }
