--- a/src/components/Homepage/CourseHighlights/highlights.css
+++ b/src/components/Homepage/CourseHighlights/highlights.css
@@ -1,14 +1,14 @@
 .courseHighlights {
   display: flex;
   padding: 50px 10%;
-  gap: 20px;
+  gap: 30px;
 }
 
 .courseHighlights-image {
-  width: 100%;
   border-right: 7px solid var(--orange-color);
   border-top: 5px solid var(--red-color);
   box-shadow: 4px 4px 10px 4px rgba(0, 0, 0, 0.5);
+  min-width: 590px;
 }
 
 .courseHighlights-right {
@@ -20,6 +20,7 @@
 .courseHighlights-left h2 {
   font-size: 30px;
   margin-bottom: 10px;
+  font-family: "yekanBold";
 }
 
 .courseHighlights-left-p1,
@@ -28,4 +29,24 @@
   line-height: 2.2;
   text-align: justify;
   margin-top: 10px;
+}
+
+@media screen and (max-width: 1688px) {
+  .courseHighlights-left-p1,
+  .courseHighlights-left-p2 {
+    font-size: 12px;
+    line-height: 2;
+  }
+}
+@media screen and (max-width: 1508px) {
+  .courseHighlights {
+    display: flex;
+    flex-direction: column;
+  }
+}
+@media screen and (max-width: 722px) {
+  .courseHighlights-image {
+    min-width: 100px;
+    width: 100%;
+  }
 }
