--- a/src/components/Homepage/Courses/courses.css
+++ b/src/components/Homepage/Courses/courses.css
@@ -94,3 +94,14 @@
   border-radius: 5px;
   font-size: 11px;
 }
+
+@media screen and (max-width: 368px) {
+  .courses-section-content {
+    grid-template-columns: 1fr;
+  }
+
+  .courseBox-details h3 {
+    font-size: 16px;
+    font-weight: bold;
+  }
+}
