--- a/src/components/Homepage/CourseHighlights/highlights.css
+++ b/src/components/Homepage/CourseHighlights/highlights.css
@@ -5,10 +5,9 @@
 }
 
 .courseHighlights-image {
-  border-right: 7px solid var(--orange-color);
-  border-top: 5px solid var(--red-color);
-  box-shadow: 4px 4px 10px 4px rgba(0, 0, 0, 0.5);
+  box-shadow: 2px 2px 20px 2px rgb(243, 59, 22);
   min-width: 590px;
+  border-radius: 10px;
 }
 
 .courseHighlights-right {
