--- a/src/components/Homepage/Slider/slider.css
+++ b/src/components/Homepage/Slider/slider.css
@@ -1,6 +1,7 @@
 .iconsectionContainer {
-  padding: 100px 10% 0 10%;
+  padding: 50px 10% 0 10%;
   height: 100%;
+  margin-top: 30px;
 }
 
 .iconBox {
