--- a/src/components/Homepage/AllCourses/allcourses.css
+++ b/src/components/Homepage/AllCourses/allcourses.css
@@ -4,17 +4,19 @@
 
 .allCourses-header {
   display: flex;
-  gap: 2px;
+  gap: 5px;
   justify-content: center;
+  margin-bottom: 10px;
 }
 
 .allCourses-header button {
   background-color: #ffffff;
   color: #000;
-  padding: 6px 8px;
+  padding: 8px 10px;
   cursor: pointer;
   font-size: 12px;
   font-weight: bold;
+  border-radius: 5px;
 }
 
 .allCourses-main {
@@ -25,6 +27,7 @@
   padding: 30px;
   background-color: #f5f5f5;
   border-radius: 10px;
+  min-height: 800px;
 }
 
 .allCourse-image {
@@ -36,6 +39,8 @@
   border-radius: 10px;
   box-shadow: 2px 2px 10px 4px rgba(0, 0, 0, 0.2);
   position: relative;
+  max-width: 250px;
+  height: fit-content;
 }
 
 .allCourses-content {
