--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -7,6 +7,7 @@
   background-color: var(--secondary-color);
   color: var(--text-color);
   padding: 15px 5%;
+  box-shadow: 3px 3px 3px 4px rgba(0, 0, 0, 0.4);
 }
 
 /* RIGHT - LOGO & LINKS */
@@ -16,7 +17,7 @@
   gap: 10px;
   justify-content: center;
   align-items: center;
-  background-color: tomato;
+  /* background-color: tomato; */
 }
 
 .headerLogo {
@@ -95,6 +96,7 @@
   background-color: var(--primary-color);
   padding: 5px 10px;
   font-family: "vazirFD";
+  border-radius: 5px;
 }
 
 /* .hours {
