header done, make responsive

--- a/src/index.css
+++ b/src/index.css
@@ -24,7 +24,7 @@
   --text-color: #fdfdfd;
   --red-color: #f43219;
   --orange-color: #eb671c;
-  --link-color: #606a7c;
+  --link-color: #4f5a6d;
 }
 
 .light {
@@ -34,7 +34,7 @@
   --text-color: #111828;
   --red-color: #f43219;
   --orange-color: #eb671c;
-  --link-color: #cdd0d4;
+  --link-color: #e2e5ea;
 }
 
 /* FONTS */
