--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -25,6 +25,7 @@
   gap: 5px;
   justify-content: center;
   align-items: center;
+  user-select: none;
 }
 
 .headerLogo img {
@@ -34,6 +35,7 @@
 .headerLogo p {
   font-weight: bold;
   font-size: 13px;
+  color: var(--text-color);
 }
 
 .headerLinks {
@@ -46,16 +48,16 @@
 
 .headerLinkItem {
   color: var(--text-color);
-  font-size: 14px;
-  /* font-weight: bold; */
+  font-size: 13px;
+  font-weight: bold;
   padding: 4px 7px;
   border-radius: 5px;
 }
 
 .headerLinkBtn {
   color: var(--text-color);
-  font-size: 14px;
-  /* font-weight: bold; */
+  font-size: 13px;
+  font-weight: bold;
   background: transparent;
   border: none;
   font-family: "yekanRegular";
@@ -74,50 +76,6 @@
 .headerLinkBtn:hover {
   background-color: var(--link-color);
 }
-
-/* CENTER - COUNTDOWN */
-.countDown {
-  display: flex;
-  gap: 15px;
-}
-
-.days {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 8px;
-}
-
-.counterItem {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 8px;
-  background-color: var(--primary-color);
-  padding: 5px 10px;
-  font-family: "vazirFD";
-  border-radius: 5px;
-}
-
-/* .hours {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 8px;
-} */
-
-/* .minutes {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 8px;
-}
-.seconds {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 8px;
-} */
 
 /* LEFT - BUTTONS */
 
