--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -77,6 +77,17 @@
   background-color: var(--link-color);
 }
 
+.countDownContainer {
+  display: flex;
+  gap: 12px;
+  align-items: center;
+}
+
+.offIcon {
+  font-size: 24px;
+  color: var(--text-color);
+}
+
 /* LEFT - BUTTONS */
 
 .headerIcons {
@@ -102,4 +113,33 @@
 
 .headerIcons button:hover {
   transform: translateY(-0.8px);
+}
+
+.hamburgerContainer {
+  display: none;
+}
+
+.hamburgerBtn {
+  background: transparent;
+  margin-top: 13px;
+  margin-right: 10px;
+  border: none;
+  color: #fff;
+  font-size: 20px;
+  cursor: pointer;
+}
+
+@media screen and (max-width: 1395px) {
+  .countDownContainer {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 987px) {
+  .headerLinks {
+    display: none;
+  }
+  .hamburgerContainer {
+    display: block;
+  }
 }
