--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -8,6 +8,7 @@
   color: var(--text-color);
   padding: 15px 5%;
   box-shadow: 1px 1px 1px 1px rgba(0, 0, 0, 0.1);
+  position: relative;
 }
 
 /* RIGHT - LOGO & LINKS */
@@ -127,6 +128,10 @@
   color: #fff;
   font-size: 20px;
   cursor: pointer;
+}
+
+.megaMenuHeader {
+  position: absolute;
 }
 
 @media screen and (max-width: 1395px) {
