--- a/src/components/Header/Megamenu/megamnue.css
+++ b/src/components/Header/Megamenu/megamnue.css
@@ -9,8 +9,9 @@
   border-radius: 10px;
   width: 700px;
   position: absolute;
-  top: 115px;
-  right: 150px;
+  z-index: 2;
+  top: 6px;
+  right: 130px;
   box-shadow: 1px 1px 10px 1px rgba(0, 0, 0, 0.1);
 }
 
