--- a/src/components/Header/Megamenu/megamnue.css
+++ b/src/components/Header/Megamenu/megamnue.css
@@ -26,7 +26,7 @@
   justify-content: center;
   gap: 9px;
   padding: 3px 9px;
-  border-radius: 10px;
+  border-radius: 5px;
   transition: all ease-in-out 0.1s;
 }
 
@@ -43,9 +43,13 @@
   background-color: var(--link-color);
   padding: 3px 5px;
   border-radius: 40%;
-  font-size: 15px;
+  font-size: 14px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .megaMenuTitle {
-  font-size: 16px;
+  font-size: 13px;
+  font-weight: 900;
 }
