--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -68,6 +68,11 @@
   display: flex;
   align-items: center;
   gap: 2px;
+  margin-top: 3px;
+}
+
+.headerLinkBtnSelected {
+  background-color: var(--link-color);
 }
 
 .headerLinkItem:hover {
