--- a/src/index.css
+++ b/src/index.css
@@ -81,5 +81,5 @@ h6 {
   background-color: var(--primary-color);
   color: var(--text-color);
   padding: 20px;
-  height: 100vh;
+  height: 100%;
 }
