--- a/src/components/Homepage/Courses/courses.css
+++ b/src/components/Homepage/Courses/courses.css
@@ -57,11 +57,14 @@
   padding: 3px 6px;
   border-radius: 2px;
   color: #fff;
+  font-size: 10px;
+  text-decoration: line-through;
 }
 
 .allCourses-courseBox-details span:nth-child(2) {
   background-color: rgb(13, 139, 109);
   padding: 3px 6px;
+  font-size: 10px;
   border-radius: 2px;
   color: #fff;
 }
@@ -69,6 +72,7 @@
 .allCourses-courseBox-details span:last-child {
   background-color: steelblue;
   padding: 3px 6px;
+  font-size: 10px;
   border-radius: 2px;
   color: #fff;
 }
@@ -89,21 +93,24 @@
   align-items: center;
 }
 .allCourses-ReadmoreBtn {
-  background-color: var(--primary-color);
+  background-color: var(--orange-color);
+  color: #fff;
   padding: 5px 9px;
   font-family: "yekanRegular";
-  font-size: 12px;
-  font-weight: 900;
-  color: var(--text-color);
+  font-size: 11px;
+  font-weight: 300;
 }
 
 .allCourses-buyBtn {
-  background-color: var(--orange-color);
-  padding: 4px 8px;
+  background-color: var(--red-color);
+  padding: 6px 8px;
   font-family: "yekanRegular";
   font-size: 12px;
   font-weight: 900;
-  color: var(--text-color);
   border: none;
   cursor: pointer;
+  color: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
