--- a/src/components/Homepage/Feedback/feedback.css
+++ b/src/components/Homepage/Feedback/feedback.css
@@ -9,9 +9,11 @@
   font-size: 14px;
 }
 
-.swiperFeedback {
-  width: 100%;
-  height: 100%;
+.feedbackContainer {
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  grid-gap: 10px;
+  margin-top: 50px;
 }
 
 .swiperFeedbackBox {
@@ -26,16 +28,38 @@
   align-items: center;
   margin-top: 20px;
   padding: 50px 10%;
+  background-color: var(--secondary-color);
+  position: relative;
 }
 
 .swiperFeedbackBox img {
-  width: 100px;
+  width: 70px;
   border-radius: 50%;
+  position: absolute;
+  top: -30px;
+  border: 4px solid var(--link-color);
+  box-shadow: 1px 1px 5px 1px rgba(0, 0, 0, 0.4);
 }
 
 .swiperFeedbackBox p {
   font-family: "vazirRegular";
-  font-size: 13px;
+  font-size: 11px;
   text-align: right;
-  line-height: 2;
+  line-height: 1.8;
+  text-align: justify;
+}
+
+@media screen and (max-width: 1343px) {
+  .feedbackContainer {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, auto));
+    grid-gap: 10px;
+    margin-top: 50px;
+  }
+}
+
+@media screen and (max-width: 555px) {
+  .feedback {
+    padding: 50px 4%;
+  }
 }
